clusters/firefly/apps/sabnzbd/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: sabnzbd
spec:
  redirectScheme:
    scheme: https
    permanent: true
